<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_rate_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/dialog_rate_title"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/image_view_rate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_view_rate"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="48dp"
            android:src="@drawable/ic_like"
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/button_remind_later"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_rate_title" />

        <Button
            android:id="@+id/button_remind_later"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/colorAccent"
            android:text="@string/dialog_rate_remind"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_rate"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_rate"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/colorAccent"
            android:text="@string/dialog_rate_rate_now"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_remind_later" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>