<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame_layout_repost_root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#ffff"
    android:focusableInTouchMode="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout_repost_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:visibility="visible">

        <FrameLayout
            android:id="@+id/frame_layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/content_shadow"
            android:paddingStart="7dp"
            android:paddingTop="4dp"
            android:paddingEnd="7dp"
            android:paddingBottom="12dp"
            app:layout_constraintBottom_toTopOf="@id/text_view_repost_caption"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside">

            <com.artto.fastrepost.ui.element.ResizableViewPager
                android:id="@+id/view_pager_repost_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never" />

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/circle_indicator_repost_content"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="bottom" />

            <com.budiyev.android.circularprogressbar.CircularProgressBar
                android:id="@+id/circular_progress_bar_repost_content"
                style="@style/CircularProgressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="24dp"
                android:visibility="gone" />

        </FrameLayout>

        <TextView
            android:id="@+id/text_view_repost_caption"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@drawable/repost_caption_shadow"
            android:gravity="top"
            android:padding="12dp"
            android:scrollbars="vertical"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/guid_line_repost_buttons"
            app:layout_constraintTop_toBottomOf="@id/frame_layout_content" />

        <android.support.constraint.Guideline
            android:id="@+id/guid_line_repost_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="52dp" />

        <Button
            android:id="@+id/button_repost_save"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:background="@drawable/repost_caption_shadow"
            android:text="@string/repost_save"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_repost_repost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guid_line_repost_buttons" />

        <Button
            android:id="@+id/button_repost_repost"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:background="@drawable/repost_caption_shadow"
            android:text="@string/repost_repost"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_repost_save"
            app:layout_constraintTop_toBottomOf="@id/guid_line_repost_buttons" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_repost_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:visibility="gone"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp">

            <TextView
                android:id="@+id/text_view_repost_hint_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repost_hint_title"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/text_view_repost_hint_first"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/text_view_repost_hint_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableEnd="@drawable/ic_more_vert_black_24dp"
                android:drawableRight="@drawable/ic_more_vert_black_24dp"
                android:text="@string/repost_hint_first"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/text_view_repost_hint_second"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_repost_hint_title" />

            <TextView
                android:id="@+id/text_view_repost_hint_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repost_hint_second"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_repost_hint_first" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>